horizontal scroll fix

--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ color: #222121;
 }
 .bg-img {
     position: absolute;
-    width: 106%;
+    max-width: 100%;
     z-index: -150;
 }
 .bg-text{
@@ -61,6 +61,9 @@ color: #222121;
     font-size: 100px;
     z-index: -150;
     color: #f2f2f2;
+    right: 0;
+    left: 0;
+
 }
 /* fonts  */
 @font-face{
